# codegen_example

./: BUILD.bazel  README.md  WORKSPACE
factory/: BUILD.bazel  main.go
factory/config/: BUILD.baze  base.json
factory/templates/: BUILD.bazel  things.tmpl
rules/: factory.bzl
stone/: BUILD.bazel  print.go
stone/config/: config.json
