load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//:rules/factory.bzl", "factory")

factory(
    name = "go_factory",
    config = "config/config.json",
    package = "stone",
)

go_library(
    name = "go_generated_library",
    srcs = [":go_factory"],
    importpath = "github.com/linzhp/codegen_example/stone",
    visibility = ["//visibility:public"],
)
